--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "movies",
   "version": "1.0.0",
   "description": "mentorship",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/.bin/webpack-dev-server --content-base --mode development --open",
+    "build": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,26 @@
   },
   "homepage": "https://github.com/offdark/movies#readme",
   "devDependencies": {
-    "webpack": "^4.16.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   },
-  "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server --content-base"
+  "dependencies": {
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-redux": "^5.0.7",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0"
   }
 }
